2008-09-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* configure.ac: Add gettext-related stuff from the old code.

	* src/main.c (main): Initialise locale and gettext system.

	* src/hildon-desktop.h: New file for global defines.

	* src/launcher/hd-app-launcher.c (hd_app_launcher_get_label): Use
	gettext() to get localised application name.

2008-09-09  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/launcher/hd-task-launcher.c
	(hd_task_launcher_get_preferred_height): Use amount of rows to
	calculate the height. Fix a one-off problem when determining start of
	a new row. Fixes: NB#88209

	* src/home/hd-home.c (hd_home_constructed): Remove obsolete code for
	adding a search path for temporary icons.

	* Debug printout adjustments here and there.

2008-09-02  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* debian/hildon-desktop.postinst: Added. Modify Gtk icon theme to
	include 48x48 icons. Update Gtk icon cache. Install the GConf schema.

	* debian/hildon-desktop.init: Added. Start and stop hildon-desktop
	using a launch wrapper.

	* src/hildon-desktop.schemas: Added. GConf schema specifying default
	background images.

	* src/Makefile.am: Add installation of the GConf schema.

	* data/icons/Makefile.am, data/icons/48x48/Makefile.am: Install the
	temporary icons to the same directory as the pre-installed ones.

2008-08-29  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* configure.ac: new output file data/themes/Makefile

	* data/Makefile.am: install also themes directory

	* data/icons/48x48/Makefile.am: use a custom icon directory for the
	temporary icons.

	* data/icons/Makefile.am: install a custom icon theme for the
	temporary icons.

	* src/home/hd-home.[ch] (hd_home_constructed): prepend a temporary icon
	directory.
	(hd_home_remove_status_area): New function to handle removal of Status
	Area. Calls corresponding function in HdSwitcher.
	(hd_home_add_status_menu): New function to handle addition of Status