@@ -1,3 +1,13 @@
+2008-09-22  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	* src/mb/hd-dialog.c (hd_dialog_realize): In the case Matchbox created
+	the modal blocker, select for ButtonRelease events on the window. This
+	enables us to catch ButtonRelease for system-modal dialogs.
+
+2008-09-20  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Release 1:2.2.2-1
+
 2008-09-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	* configure.ac: Add gettext-related stuff from the old code.
